Fixed colors to make title visible

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Rock+Salt&display=swap');
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
 }
 nav a{
     text-align: center;
-    color:#386CA0;
+    color:white;
     text-decoration: none;
 }
 #hero-msg h1, #hero-msg h4{
@@ -19,16 +21,16 @@ main section{
 
 #background {
     height: 725px;
-    background-color: #876D52;
+    background-color: #386CA0;
 }
 body {
     background-color: #fcfbfb;
 }
 header {
-    background-color: #386CA0;
+    background-color: #18394D;
 }
 nav a:hover {
-    background-color: black;
+    background-color: #876D52;
     color:white;
 }
 .book, .join {
@@ -49,10 +51,10 @@ footer {
     text-decoration: none;
 }
 .home-title{
-    color:white;
+    color:#18394D;
 }
 h4{
-    color:white;
+    color:#18394D;
 }
 .msg h2{
     color:white;
@@ -62,6 +64,7 @@ h4{
 }
 footer a {
     color:white;
+    text-decoration: none
 }
 footer a:hover{
     color:#18394D;
